# reuben

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
examples/entity-oriented-mt/: config-comet-csv-output.yaml  config-meta-csv-output.yaml  data.jsonl  run.sh
examples/experiments-for-paper/flores/: config-rich-output.yaml  data.jsonl  run.sh
examples/experiments-for-paper/ner/idx-cols/: config-boot-only.yaml  config-seed-boot.yaml  config-seed-only.yaml
examples/experiments-for-paper/ner/sd-cols/: config-boot-only.yaml  config-seed-boot.yaml  config-seed-only.yaml  data.jsonl  run.sh
examples/experiments-for-paper/xquad/sd-cols/: config-boot-only.yaml  config-seed-boot.yaml  config-seed-only.yaml  data.jsonl
examples/xquad/: config-csv-output.yaml  config-rich-output.yaml  run.sh
reuben/: aggregators.py  analysis.py  analysis_pipeline.py  cli.py  cli_utils.py  config.py  output.py  resampling.py  utils.py
scripts/: bump_version.sh  new-feature-branch.sh  new-release-tag.sh
scripts/experiments/ner/: parse-args.sh
scripts/experiments/ner/sd-cols/: data.jsonl  hierarchical-bootstrap.sh
scripts/experiments/xquad/: parse-args.sh
scripts/experiments/xquad/sd-cols/: data.jsonl  hierarchical-bootstrap.sh
scripts/experiments/xquad/sd-cols/results/boot-only/: leaderboard.pkl  output.txt
scripts/experiments/xquad/sd-cols/results/seed-and-boot/: leaderboard.pkl  output.txt
scripts/experiments/xquad/sd-cols/results/seed-only/: leaderboard.pkl  output.txt
